Add typing bubble animation

--- a/client/index.css
+++ b/client/index.css
@@ -191,3 +191,44 @@ ul {
     padding: 2px 7px 2px 4px;
     color: transparent;
 }
+div.menu {
+    float: right;
+    margin: 4px 7px;
+}
+div.menu img.avatar {
+    width: 29px;
+    height: 29px;
+    border-radius: 25px;
+    margin: 4px 0;
+}
+div.menu span {
+    font-weight: bold;
+    position: relative;
+    top: 1px;
+    padding: 4px 17px 4px 7px;
+    font-size: 90%;
+    cursor: default;
+}
+div.menu .cog {
+    width: 15px;
+    border-radius: 25px;
+    margin: 11px 3px;
+    cursor: pointer;
+}
+.chat ul li.typing {
+    opacity: 0.5;
+}
+@keyframes flash {
+    0% {
+        opacity: 0.5;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.5;
+    }
+}
+.chat ul li.typing div {
+    animation: flash 2s infinite;
+}
